# decaptcha

./: .gitignore  LICENSE  README.md  pyproject.toml
src/decaptcha/: main.py
src/decaptcha/models/: captcha_loader.py  train_model.py  vgg_net.py
src/decaptcha/utils/: typings.py  utils.py
